# molecule-atlas

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/: __init__.py  candidate_csv.py
backend/app/api/: candidates.py  evidence.py
backend/app/application/: __init__.py
backend/app/application/capabilities/: __init__.py  catalog.py  models.py
backend/app/application/evidence/: __init__.py  artifact_inspection.py  candidate_evidence.py  comparison.py  contracts.py  import_bundle.py  ports.py  report_generation.py  run_listing.py  run_summary.py
backend/app/chem/: descriptors.py  fingerprints.py  rendering.py  standardization.py  triage.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/evidence/: __init__.py  local_repository.py
backend/app/models/: api.py  base.py  candidate.py
backend/app/services/: candidate_repository.py  conformers.py  projection.py  similarity.py
backend/core/: pyproject.toml
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  evidence_bundle_factory.py  test_api_candidates.py  test_api_conformer.py  test_api_evidence.py  test_api_health.py  test_architecture.py  test_artifact_inspection_capabilities.py  test_boltz_adapter.py  test_candidate_evidence_capability.py  test_candidate_models.py  test_candidate_repository.py  test_capability_catalog.py  test_descriptors.py  test_diffdock_adapter.py  test_evidence_adapters.py  test_evidence_artifacts.py  test_evidence_audit.py  test_evidence_cli.py  test_evidence_comparison_capability.py  test_evidence_fixtures.py  test_evidence_html_reports.py  test_evidence_models.py  test_evidence_report_capability.py  test_evidence_reports.py  test_evidence_schema_contract.py  test_evidence_serialization.py  test_fingerprints.py  test_import_evidence_bundle.py  test_list_evidence_runs_capability.py  test_openapi_contract.py  test_posebusters_normalization.py  test_projection.py  test_rendering.py  test_run_summary_capability.py  test_semantic_artifacts.py  test_similarity.py  test_standardization.py  test_tooling_contract.py  test_triage.py
backend/typings/fastapi/: testclient.pyi
backend/typings/rdkit/: __init__.pyi  rdBase.pyi
backend/typings/rdkit/Chem/: AllChem.pyi  (+7 more)
backend/typings/sklearn/: __init__.pyi  decomposition.pyi
(+100 files in other folders)
