[project]
name = "molecule-atlas-backend"
version = "0.1.0"
description = "FastAPI and RDKit backend for Molecule Atlas"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.130.0",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.0",
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "rdkit>=2025.3.0",
  "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
