[project]
name = "molecule-atlas-backend"
version = "0.1.0"
description = "FastAPI and RDKit backend for Molecule Atlas"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.130.0",
  "molecule-atlas-core",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.0",
  "pandas>=2.3.0",
  "numpy>=2.3.0",
  "rdkit>=2025.3.0",
  "scikit-learn>=1.7.0",
]

[tool.uv.sources]
molecule-atlas-core = { path = "core", editable = true }

[dependency-groups]
dev = [
  "httpx2>=2.5.0",
  "pandas-stubs>=3.0.3.260530",
  "pyright>=1.1.411",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "I", "RUF", "UP"]

[tool.pyright]
include = ["app", "core/src", "scripts", "tests"]
exclude = [".venv"]
extraPaths = ["core/src"]
pythonVersion = "3.13"
stubPath = "typings"
typeCheckingMode = "strict"
reportImplicitOverride = "error"
reportMatchNotExhaustive = "error"
reportMissingTypeStubs = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"
