[project]
name = "molecule-atlas-core"
version = "0.1.0"
description = "Portable scientific evidence contracts for Molecule Atlas"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.12.0",
]

[project.optional-dependencies]
posebusters = [
  "posebusters==0.6.5",
]

[project.scripts]
molecule-atlas = "molecule_atlas.evidence.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "molecule_atlas"
